<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_label">登陆界面</string>
    <string name="register_label">注册界面</string>
    <string name="main_label">主界面</string>
    <string name="app_name">迷你聊</string>
    <string name="group_manager_label">分组管理</string>
    <string name="user_detail_label">用户详情</string>
    <string name="message_label">聊天消息界面</string>
    <string name="message_preview_label">图片预览</string>
    <string name="about_label">关于</string>
    <string name="express_label">快递查询</string>
    <string name="express_info_label">快递查询信息显示</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="auto_login">自动登陆</string>
    <string name="save_password">保存密码</string>
    <string name="user_name_to">用户名：</string>
    <string name="password_to">密码：</string>
    <string name="email">邮箱：</string>
    <string name="sex">性别：</string>
    <string name="old">年龄：</string>
    <string name="telphone">电话号码：</string>
    <string name="group">组别：</string>
    <string name="nick_name">昵称：</string>
    <string name="rgt_security_code">验证码：</string>
    <string name="rgt_comfirm_password">确认密码：</string>
    <string name="rgt_comfirm_register">同意注册</string>
    <string name="rgt_input_user_name">请输入用户名</string>
    <string name="rgt_input_password">请输入密码</string>
    <string name="rgt_input_email">请输入邮箱</string>
    <string name="rgt_input_comfirm_password">再输入一遍密码</string>
    <string name="rgt_input_security_code">验证码错误</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login_name_exist">该登陆名已存在，请换一个！</string>

    <!-- 分组管理 -->
    <string name="add_group">添加分组</string>
    <string name="add_group_title_tip">请输入新的分组名称</string>
    <string name="add_group_input_hint">请输入分组名</string>
    <string name="add_group_cancle">取消</string>
    <string name="add_group_confirm">确认</string>
    <string name="app_sms_content">输入短信内容</string>

    <!-- 消息管理 -->
    <string name="msg_add_image">图片</string>
    <string name="msg_add_camera">拍照</string>
    <string name="msg_add_map">地图</string>
    <string name="msg_add_kuaidi">快递</string>
    <string name="add_image">添加图片</string>

    <!-- menu -->
    <string name="about_menu">关于</string>
    <string name="exit_menu">退出</string>

    <!-- 关于界面 -->
    <string name="about_title">迷你聊及时通讯</string>
    <string name="about_version">版本号:</string>
    <string name="about_copyright">Copyright ©2014 邓良明 All Rights Reserved</string>

    <!-- 快递 -->
    <string name="express_name">快递公司名:</string>
    <string name="express_num">快递单号:</string>
    <string name="input_express_num">请输入快递单号</string>
    <string name="api_id">102616</string>
    <string name="api_secret">16135ea51cb60246eff620f130a005bd</string>
    <string name="express_query">查询</string>

</resources>