<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/express_bg"
    >
    <LinearLayout
        android:id="@+id/express_company_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:gravity="center"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express_name"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="30dp"
            />
        <Spinner
            android:id="@+id/express_company_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            />
    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/express_number_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/express_company_ll"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express_num"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="30dp"
            />
        <EditText
            android:id="@+id/express_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_express_num"
            android:textSize="@dimen/text_size"
            android:inputType="numberDecimal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    </LinearLayout>
    
    <Button 
        android:id="@+id/express_query_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/express_number_ll"
        android:text="@string/express_query"
        android:textSize="@dimen/text_size"
        android:background="@drawable/btn_selector"
        />

</RelativeLayout>
